Fix arrow on confirmation buttons moving out of place.

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -92,7 +92,7 @@ button.confirm {
 }
 
 button.confirm::after {
-  position: fixed;
+  position: absolute;
   transition: 0.2s;
   opacity: 0;
   margin-left: 5px;
